--- a/src/scss/_settings-bar.scss
+++ b/src/scss/_settings-bar.scss
@@ -62,7 +62,11 @@
 		}
 
 		.popup-block {
-			z-index: 10;
+			z-index: 0;
+
+			&.active {
+				z-index: 15;
+			}
 		}
 	}
 
